--- a/MAUIMobileStarterKit/Screens/SettingsScreen/CreateCannyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/SettingsScreen/CreateCannyonScreen.xaml
@@ -10,41 +10,54 @@
         </StackLayout>
     </NavigationPage.TitleView>
     <ScrollView>
-    <VerticalStackLayout Spacing="20" Padding="10,20,10,0">
-        <local:FlatingLabel Title="Name*" />
-        <local:FlatingLabel Title="Country*" />
-        <local:FlatingLabel Title="Region*" />
-        <local:FlatingLabel Title="State" />
-        <local:FlatingLabel Title="Mountain" />
-        <local:FlatingLabel Title="Basin" />
-        <local:FlatingLabel Title="City" />
-        <local:FlatingLabel Title="River" />
-        <local:FlatingLabel Title="Rating ( /4*)" Keyboard="Numeric"/>
-        <local:FlatingLabel Title="Start Altitude (m*)" Keyboard="Numeric"/>
-        <local:FlatingLabel Title="Elevation (m*)" Keyboard="Numeric" Text="m"/>
-        <local:FlatingLabel Title="Canyon Length (m*)" Keyboard="Numeric" Text="m*"/>
-        <local:FlatingLabel Title="Max Waterfall (m*)" Keyboard="Numeric" Text="m*"/>
-        <local:FlatingLabel Title="Difficulty Scale *" />
-        <local:FlatingLabel Title="Rope (m*)" Keyboard="Numeric"/>
-        <local:FlatingLabel Title="Approach*" Text="*"/>
-        <local:FlatingLabel Title="Descent*" Text="*"/>
-        <local:FlatingLabel Title="Return Trip" Text="*"/>
-        <local:FlatingLabel Title="Shuttle" Keyboard="Numeric" Text="km"/>
-        <local:FlatingLabel Title="Source" />
-        <local:FlatingLabel Title="Creator" Text="*"/>
-        <Button Text="Add Coordinate *" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="AddCorrdinateClicked"/>
-        <Frame>
-            <StackLayout>
+        <VerticalStackLayout Spacing="20" Padding="10,20,10,0">
+            <local:FlatingLabel Title="Name*" />
+            <Picker x:Name="countryPicker" Title="Country*" ItemsSource="{Binding CountryList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="CountryPickerSelectedIndexChanged"/>
+            <Picker x:Name="regionPicker" Title="Region*" ItemsSource="{Binding RegionList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="RegionPickerSelectedIndexChanged"/>
+            <Picker x:Name="statePicker" Title="State" ItemsSource="{Binding StateList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="StatePickerSelectedIndexChanged"/>
+            <Picker x:Name="mountainPicker" Title="Mountain" ItemsSource="{Binding MountainList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="MountainPickerSelectedIndexChanged"/>
+            <Picker x:Name="basinPicker" Title="Basin" ItemsSource="{Binding BassinList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="BasinPickerSelectedIndexChanged"/>
+            <Picker x:Name="cityPicker" Title="City" ItemsSource="{Binding CityList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="CityPickerSelectedIndexChanged"/>
+            <Picker x:Name="riverPicker" Title="River" ItemsSource="{Binding RiverList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="RiverPickerSelectedIndexChanged"/>
+            <local:FlatingLabel Title="Rating" Text="(/4*)" Keyboard="Numeric"/>
+            <local:FlatingLabel Title="Start Altitude" Text="(m*)" Keyboard="Numeric"/>
+            <local:FlatingLabel Title="Elevation (m*)" Keyboard="Numeric" Text="m"/>
+            <local:FlatingLabel Title="Canyon Length" Keyboard="Numeric" Text="m*"/>
+            <local:FlatingLabel Title="Max Waterfall" Keyboard="Numeric" Text="m*"/>
+            <local:FlatingLabel Title="Difficulty Scale" Text="*" />
+            <local:FlatingLabel Title="Rope (m*)" Keyboard="Numeric" Text="0"/>
 
-            </StackLayout>
-        </Frame>
-        <Button Text="Add Description *" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="AddDescriptionClicked" />
-        <Frame>
-            <StackLayout>
+            <VerticalStackLayout>
+                <Label FontSize="14" FontFamily="CabinBold" Text="Approach" TextColor="#03045E"/>
+                <TimePicker x:Name="Approchetemps"  Time="00:00" TextColor="#0077B6" FontFamily="CabinBold" />
+            </VerticalStackLayout>
 
-            </StackLayout>
-        </Frame>
-        <Button Text="Save Canyon" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="SaveCannyoonClicked"/>
-    </VerticalStackLayout>
+            <VerticalStackLayout>
+                <Label FontSize="14" FontFamily="CabinBold" Text="Descent" TextColor="#03045E"/>
+                <TimePicker x:Name="Descentetemps" Time="00:00" TextColor="#0077B6" FontFamily="CabinBold" />
+            </VerticalStackLayout>
+
+            <VerticalStackLayout>
+                <Label FontSize="15" FontFamily="CabinBold" Text="Return trip" TextColor="#03045E"/>
+                <TimePicker x:Name="Retourtemps" Time="00:00" TextColor="#0077B6" FontFamily="CabinBold" />
+            </VerticalStackLayout>
+            
+            <local:FlatingLabel Title="Shuttle" Keyboard="Numeric" Text="km"/>
+            <local:FlatingLabel Title="Source" />
+            <local:FlatingLabel Title="Creator" Text="{Binding NikeName}"/>
+            <Button Text="Add Coordinate *" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="AddCorrdinateClicked"/>
+            <Frame>
+                <StackLayout>
+
+                </StackLayout>
+            </Frame>
+            <Button Text="Add Description *" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="AddDescriptionClicked" />
+            <Frame>
+                <StackLayout>
+
+                </StackLayout>
+            </Frame>
+            <Button Text="Save Canyon" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="SaveCannyoonClicked"/>
+        </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
