--- a/MAUIMobileStarterKit/Screens/SettingsScreen/CreateCannyonModals/AddCoordinatorModal.xaml
+++ b/MAUIMobileStarterKit/Screens/SettingsScreen/CreateCannyonModals/AddCoordinatorModal.xaml
@@ -5,19 +5,32 @@
              BackgroundColor="#CAF0F8"
              x:Class="MAUIMobileStarterKit.Screens.SettingsScreen.CreateCannyonModals.AddCoordinatorModal"
              xmlns:local="clr-namespace:MAUIMobileStarterKit.CustomViews">
-    <StackLayout Padding="10" VerticalOptions="FillAndExpand" Spacing="10" >
+    <StackLayout Padding="5" VerticalOptions="FillAndExpand" Spacing="10" >
         <ImageButton Clicked="BackBtnClicked" Source="backarrow.png" Aspect="AspectFit" HeightRequest="25" HorizontalOptions="Start" Margin="0,10"/>
         <Frame Padding="10">
-            <VerticalStackLayout Spacing="10"> 
-            <local:FlatingLabel Title="Point Type*" />
-            <local:FlatingLabel Title="Longitude*" />
-            <local:FlatingLabel Title="Latitude*" />
+            <VerticalStackLayout Spacing="20">
+                <Picker x:Name="pinPointpicker" Title="Point Type*" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold">
+                    <Picker.ItemsSource>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String>ExtraPoint</x:String>
+                            <x:String>Parking amont</x:String>
+                            <x:String>Parking aval</x:String>
+                            <x:String>Parking</x:String>
+                            <x:String>StartCanyon</x:String>
+                            <x:String>End of canyon</x:String>
+                            <x:String>External point</x:String>
+                            <x:String>Internal point</x:String>
+                        </x:Array>
+                    </Picker.ItemsSource>
+                </Picker>
+                <local:FlatingLabel Title="Longitude*" Text="{Binding Longitude}" />
+                <local:FlatingLabel Title="Latitude*" Text="{Binding Latitude}"/>
             </VerticalStackLayout>
         </Frame>
         <Button Text="Save Coordinate" Margin="0,20,0,0" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="SaveCoordinate"/>
-        <maps:Map MyLocationEnabled="True"  VerticalOptions="FillAndExpand" x:Name="mapView" HeightRequest="400"/>
+        <maps:Map MyLocationEnabled="True" MapType="Hybrid"  VerticalOptions="FillAndExpand" x:Name="mapView" HeightRequest="380"/>
 
-        <Button Text="Get Coordinate" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="SaveCoordinate"/>
+        <Button Text="Get Coordinate" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="GetCurrentGEOCoordinates" />
 
     </StackLayout>
 </ContentPage>
