add create canyon service

--- a/MAUIMobileStarterKit/Screens/SettingsScreen/CreateCannyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/SettingsScreen/CreateCannyonScreen.xaml
@@ -11,7 +11,7 @@
     </NavigationPage.TitleView>
     <ScrollView>
         <VerticalStackLayout Spacing="20" Padding="10,20,10,0">
-            <local:FlatingLabel Title="Name*" />
+            <local:FlatingLabel Title="Name*" Text="{Binding Name}" />
             <Picker x:Name="countryPicker" Title="Country*" ItemsSource="{Binding CountryList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="CountryPickerSelectedIndexChanged"/>
             <Picker x:Name="regionPicker" Title="Region*" ItemsSource="{Binding RegionList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="RegionPickerSelectedIndexChanged"/>
             <Picker x:Name="statePicker" Title="State" ItemsSource="{Binding StateList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="StatePickerSelectedIndexChanged"/>
@@ -19,31 +19,31 @@
             <Picker x:Name="basinPicker" Title="Basin" ItemsSource="{Binding BassinList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="BasinPickerSelectedIndexChanged"/>
             <Picker x:Name="cityPicker" Title="City" ItemsSource="{Binding CityList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="CityPickerSelectedIndexChanged"/>
             <Picker x:Name="riverPicker" Title="River" ItemsSource="{Binding RiverList}" TitleColor="#03045E" TextColor="#0077B6" FontFamily="CabinBold" SelectedIndexChanged="RiverPickerSelectedIndexChanged"/>
-            <local:FlatingLabel Title="Rating" Text="(/4*)" Keyboard="Numeric"/>
-            <local:FlatingLabel Title="Start Altitude" Text="(m*)" Keyboard="Numeric"/>
-            <local:FlatingLabel Title="Elevation (m*)" Keyboard="Numeric" Text="m"/>
-            <local:FlatingLabel Title="Canyon Length" Keyboard="Numeric" Text="m*"/>
-            <local:FlatingLabel Title="Max Waterfall" Keyboard="Numeric" Text="m*"/>
-            <local:FlatingLabel Title="Difficulty Scale" Text="*" />
-            <local:FlatingLabel Title="Rope (m*)" Keyboard="Numeric" Text="0"/>
+            <local:FlatingLabel Title="Rating (/4*)" Text="{Binding EntryDcNote}" Keyboard="Numeric"/>
+            <local:FlatingLabel Title="Start Altitude (m*)" Text="{Binding EntryAltDepart}" Keyboard="Numeric"/>
+            <local:FlatingLabel Title="Elevation (m*)" Keyboard="Numeric" Text="{Binding EntryDeniv}"/>
+            <local:FlatingLabel Title="Canyon Length" Keyboard="Numeric" Text="{Binding EntryLongueur}"/>
+            <local:FlatingLabel Title="Max Waterfall (m*)" Keyboard="Numeric" Text="{Binding EntryCasMax}"/>
+            <local:FlatingLabel Title="Difficulty Scale*" Text="{Binding EntryCotation}" />
+            <local:FlatingLabel Title="Rope (m*)" Keyboard="Numeric" Text="{Binding EntryCorde}"/>
 
             <VerticalStackLayout>
                 <Label FontSize="14" FontFamily="CabinBold" Text="Approach" TextColor="#03045E"/>
-                <TimePicker x:Name="Approchetemps"  Time="00:00" TextColor="#0077B6" FontFamily="CabinBold" />
+                <TimePicker x:Name="Approchetemps" Time="{Binding Approchetemps}" TextColor="#0077B6" FontFamily="CabinBold" />
             </VerticalStackLayout>
 
             <VerticalStackLayout>
                 <Label FontSize="14" FontFamily="CabinBold" Text="Descent" TextColor="#03045E"/>
-                <TimePicker x:Name="Descentetemps" Time="00:00" TextColor="#0077B6" FontFamily="CabinBold" />
+                <TimePicker x:Name="Descentetemps" Time="{Binding Descentetemps}" TextColor="#0077B6" FontFamily="CabinBold" />
             </VerticalStackLayout>
 
             <VerticalStackLayout>
                 <Label FontSize="15" FontFamily="CabinBold" Text="Return trip" TextColor="#03045E"/>
-                <TimePicker x:Name="Retourtemps" Time="00:00" TextColor="#0077B6" FontFamily="CabinBold" />
+                <TimePicker x:Name="Retourtemps" Time="{Binding Retourtemps}" TextColor="#0077B6" FontFamily="CabinBold" />
             </VerticalStackLayout>
-            
-            <local:FlatingLabel Title="Shuttle" Keyboard="Numeric" Text="km"/>
-            <local:FlatingLabel Title="Source" />
+
+            <local:FlatingLabel Title="Shuttle (km)" Keyboard="Numeric" Text="{Binding NavetteDistance}"/>
+            <local:FlatingLabel Title="Source" Text="{Binding Source}" />
             <local:FlatingLabel Title="Creator" Text="{Binding NikeName}"/>
             <Button Text="Add Coordinate *" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="AddCorrdinateClicked"/>
 
@@ -75,7 +75,7 @@
             
             <Button Text="Add Description *" FontFamily="CabinBold" BackgroundColor="#00B4D8" CornerRadius="20" TextColor="White" FontSize="15" Clicked="AddDescriptionClicked" />
             <Frame Padding="5,0" BorderColor="Transparent" BackgroundColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand">
-                <ListView ItemsSource="{Binding Description}" HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None"  >
+                <ListView ItemsSource="{Binding AccessDescription}" HasUnevenRows="True" SelectionMode="None" SeparatorVisibility="None"  >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
