--- a/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/CanyoningPageScreens/TopoCanyonScreen.xaml
@@ -14,10 +14,18 @@
                                 <StackLayout  Margin="0,5" >
                                     <Frame Padding="0,0,5,0" BorderColor="Transparent" CornerRadius="5"  HasShadow="False" BackgroundColor="#90E0EF" >
                                         <Grid RowDefinitions="Auto" ColumnDefinitions="Auto,*" ColumnSpacing="10" >
-                                            <Image Source="https://fastly.picsum.photos/id/54/3264/2176.jpg?hmac=blh020fMeJ5Ru0p-fmXUaOAeYnxpOPHnhJojpzPLN3g" WidthRequest="180" BackgroundColor="LightGrey" Aspect="AspectFill" Grid.Row="0" Grid.Column="0"/>
+                                            <Image WidthRequest="180" BackgroundColor="LightGrey" Aspect="AspectFill" Grid.Row="0" Grid.Column="0">
+                                                <Image.Source>
+                                                    <FileImageSource File="{Binding ImageObstacle}"/>
+                                                </Image.Source>
+                                            </Image>
                                             <VerticalStackLayout  Grid.Row="0" Grid.Column="1" Padding="0,5">
                                                 <VerticalStackLayout>
-                                                    <Image Source="https://fastly.picsum.photos/id/55/4608/3072.jpg?hmac=ahGhylwdN52ULB37deeMZX6T_G7NiERtoPhwydMvUKQ" HeightRequest="100" BackgroundColor="LightGrey" Aspect="AspectFill"  />
+                                                    <Image HeightRequest="100" BackgroundColor="LightGrey" Aspect="AspectFill"  >
+                                                        <Image.Source>
+                                                            <FileImageSource File="{Binding ImageDanger}"/>
+                                                        </Image.Source>
+                                                    </Image>
                                                     <Label Text="{Binding TypeObstacle}" FontFamily="CabinBold" TextColor="#03045E" FontSize="15" FontAttributes="Bold"/>
                                                 </VerticalStackLayout>
                                                 <VerticalStackLayout>
@@ -39,7 +47,7 @@
                                                 </VerticalStackLayout>
                                                 <HorizontalStackLayout  VerticalOptions="CenterAndExpand">
                                                     <Label VerticalTextAlignment="Center" Text="Is validated" TextColor="#03045E" FontSize="15" FontFamily="CabinBold" TextDecorations="Underline"/>
-                                                    <CheckBox Color="#03045E" VerticalOptions="Start" />
+                                                    <CheckBox Color="#03045E" VerticalOptions="Start" IsEnabled="{Binding IsAuthorize}" IsChecked="{Binding IsValidTopo}" />
                                                 </HorizontalStackLayout>
                                             </VerticalStackLayout>
                                         </Grid>
